# zcw-compression

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: zcw.cc  zcw.h
lib/common/: dictionary.h  internal.h
lib/dec/: decoder.cc  decoder.h  decoder_dict.cc  decoder_dict.h
lib/enc/: encoder.cc  encoder.h  encoder_dict.cc  encoder_dict.h  word.h
tools/cli/: .gitignore  CMakeLists.txt  cli.cc
tools/dictionary_generator/: .gitignore  generator.py
